--- a/1-example1/Dockerfile
+++ b/1-example1/Dockerfile
@@ -2,10 +2,14 @@ FROM node
 
 WORKDIR /app
 
-COPY . /app
+COPY package.json /app
 
 RUN npm install
 
+# when only code changed, no need to run npm install
+COPY . /app
+
+# optional (because this is the default), but recommended (best practice)
 EXPOSE 80
 
 CMD [ "node", "server.js" ]
