--- a/12-example-11/env/backend.env
+++ b/12-example-11/env/backend.env
@@ -1,4 +1,4 @@
-MONGODB_USERNAME=maximilian
-MONGODB_PASSWORD=BjJiJgQOzPuwpETh
-MONGODB_URL=cluster0.ntrwp.mongodb.net
+MONGODB_USERNAME=halnt
+MONGODB_PASSWORD=4yHHQIw3NqaQv4GS
+MONGODB_URL=cluster0.c85a9pv.mongodb.net
 MONGODB_NAME=goals-dev
