--- a/18-example-15/deployment.yaml
+++ b/18-example-15/deployment.yaml
@@ -9,13 +9,11 @@ spec:
       app: second-app
       tier: backend
   template:
-    metadata: 
+    metadata:
       labels:
         app: second-app
         tier: backend
-    spec: 
+    spec:
       containers:
         - name: second-node
-          image: academind/kub-first-app:2
-        # - name: ...
-        #   image: ...
+          image: halntit/kube-first-app:2
