--- a/18-example-15/deployment.yaml
+++ b/18-example-15/deployment.yaml
@@ -21,5 +21,12 @@ spec:
       containers:
         - name: second-node
           image: halntit/kube-first-app
+          imagePullPolicy: Always
+          livenessProbe:
+            httpGet:
+              path: /
+              port: 8080
+            periodSeconds: 10
+            initialDelaySeconds: 5
         # - name: third-node
         #   image: halntit/kube-third-app:3
