--- a/19-example-16/deployment.yaml
+++ b/19-example-16/deployment.yaml
@@ -14,4 +14,10 @@ spec:
     spec:
       containers:
         - name: story
-          image: halntit/kub-data-demo
+          image: halntit/kub-data-demo:1
+          volumeMounts:
+            - mountPath: /app/story
+              name: story-volume
+      volumes:
+        - name: story-volume
+          emptyDir: {}
