make auth, users separated

--- a/20-example-17/k8s/users-deployment.yml
+++ b/20-example-17/k8s/users-deployment.yml
@@ -16,6 +16,6 @@ spec:
         - name: users
           image: halntit/kub-demo-users:latest
           imagePullPolicy: Always
-        - name: auth
-          image: halntit/kub-demo-auth:latest
-          imagePullPolicy: Always
+          env:
+            - name: AUTH_ADDRESS
+              value: localhost
