--- a/20-example-17/k8s/users-deployment.yml
+++ b/20-example-17/k8s/users-deployment.yml
@@ -18,4 +18,5 @@ spec:
           imagePullPolicy: Always
           env:
             - name: AUTH_ADDRESS
-              value: "10.97.185.146"
+              # value: "10.97.185.146"
+              value: "auth-service.default"
