--- a/20-example-17/k8s/auth-service.yml
+++ b/20-example-17/k8s/auth-service.yml
@@ -5,7 +5,7 @@ metadata:
 spec:
   selector:
     app: auth
-  type: ClusterIP
+  type: ClusterIP # CANNOT be accessed from outside
   ports:
     - protocol: "TCP"
       port: 80
