--- a/20-example-17/k8s/tasks-service.yml
+++ b/20-example-17/k8s/tasks-service.yml
@@ -5,7 +5,7 @@ metadata:
 spec:
   selector:
     app: tasks
-  type: LoadBalancer
+  type: LoadBalancer # can be accessed from outside
   ports:
     - protocol: "TCP"
       port: 8000
