--- a/22-sample-18/k8s/users.yaml
+++ b/22-sample-18/k8s/users.yaml
@@ -27,10 +27,9 @@ spec:
     spec:
       containers:
         - name: users-api
-          image: academind/kub-dep-users:latest
+          image: halntit/kub-dep-users:latest
           env:
             - name: MONGODB_CONNECTION_URI
-              value: 'mongodb+srv://halnt:voWB9uMxJPQu1QwD@cluster0.c85a9pv.mongodb.net/users?retryWrites=true&w=majority'
-                      
+              value: 'mongodb+srv://halnt:voWB9uMxJPQu1QwD@cluster0.c85a9pv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
             - name: AUTH_API_ADDRESSS
               value: 'auth-service.default:3000'
