--- a/22-sample-18/docker-compose.yaml
+++ b/22-sample-18/docker-compose.yaml
@@ -11,5 +11,5 @@ services:
     ports:
       - '8080:3000'
     environment:
-      MONGODB_CONNECTION_URI: 'mongodb+srv://maximilian:wk4nFupsbntPbB3l@cluster0.ntrwp.mongodb.net/users?retryWrites=true&w=majority'
+      MONGODB_CONNECTION_URI: 'mongodb+srv://halnt:U7hIVp713hjGJmcH@cluster0.c85a9pv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
       AUTH_API_ADDRESSS: 'auth:3000'
