--- a/22-sample-18/k8s/users.yaml
+++ b/22-sample-18/k8s/users.yaml
@@ -1,3 +1,36 @@
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
+  name: efs-sc
+provisioner: efs.csi.aws.com
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: efs-pv
+spec:
+  capacity:
+    storage: 5Gi
+  volumeMode: Filesystem
+  accessModes:
+    - ReadWriteMany
+  storageClass: efs-sc
+  csi:
+    driver: efs.csi.aws.com
+    volumeHandle: fs-0cdb28b94a17f45af
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: efs-pvc
+spec:
+  accessModes:
+    - ReadWriteMany
+  storageClassName: efs-sc
+  resources:
+    requests:
+      storage: 5Gi
+---
 apiVersion: v1
 kind: Service
 metadata:
@@ -33,3 +66,10 @@ spec:
               value: 'mongodb+srv://halnt:U7hIVp713hjGJmcH@cluster0.c85a9pv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
             - name: AUTH_API_ADDRESSS
               value: 'auth-service.default:3000'
+          volumeMounts:
+            - name: efs-vol
+              mountPath: /app/users
+      volumes:
+        - name: efs-vol
+          persistentVolumeClaim:
+            claimName: efs-pvc
