--- a/22-sample-18/k8s/users.yaml
+++ b/22-sample-18/k8s/users.yaml
@@ -14,7 +14,7 @@ spec:
   volumeMode: Filesystem
   accessModes:
     - ReadWriteMany
-  storageClass: efs-sc
+  storageClassName: efs-sc
   csi:
     driver: efs.csi.aws.com
     volumeHandle: fs-0cdb28b94a17f45af
