--- a/22-sample-18/k8s/users.yaml
+++ b/22-sample-18/k8s/users.yaml
@@ -64,7 +64,7 @@ spec:
           env:
             - name: MONGODB_CONNECTION_URI
               value: 'mongodb+srv://halnt:U7hIVp713hjGJmcH@cluster0.c85a9pv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
-            - name: AUTH_API_ADDRESSS
+            - name: AUTH_API_ADDRESS
               value: 'auth-service.default:3000'
           volumeMounts:
             - name: efs-vol
